// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages selectPurchaseMethods should render an error when an error message is passed through to props 1`] = `
<FullColumnLayout
  description="Purchase Methods selection page of the Create Fares Data Service"
  title="Select Purchase Methods - Create Fares Data Service"
>
  <CsrfForm
    action="/api/selectSalesOfferPackage"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Choose at least one service from the options",
            "id": "sales-offer-package-error",
          },
        ]
      }
    />
    <h1
      className="govuk-heading-l"
      id="select-sales-offer-package-page-heading"
    >
      How are your tickets sold?
    </h1>
    <div
      className="govuk-warning-text"
    >
      <span
        aria-hidden="true"
        className="govuk-warning-text__icon govuk-!-margin-top-1"
      >
        !
      </span>
      <strong
        className="govuk-warning-text__text"
      >
        <span
          className="govuk-warning-text__assistive"
        >
          Warning
        </span>
        You can create new purchase methods in your
         
        <a
          className="govuk-link"
          href="/viewPurchaseMethods"
        >
          operator settings.
        </a>
         
        <br />
        Don't worry you can navigate back to this page when you are finished.
      </strong>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
    <a
      className="govuk-button govuk-button--secondary create-new-sop-button"
      data-module="govuk-button"
      draggable="false"
      href="/salesOfferPackages"
      id="create-new-button"
      role="button"
    >
      Create new
    </a>
  </CsrfForm>
</FullColumnLayout>
`;

exports[`pages selectPurchaseMethods should render correctly 1`] = `
<FullColumnLayout
  description="Purchase Methods selection page of the Create Fares Data Service"
  title="Select Purchase Methods - Create Fares Data Service"
>
  <CsrfForm
    action="/api/selectSalesOfferPackage"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <h1
      className="govuk-heading-l"
      id="select-sales-offer-package-page-heading"
    >
      How are your tickets sold?
    </h1>
    <div
      className="govuk-warning-text"
    >
      <span
        aria-hidden="true"
        className="govuk-warning-text__icon govuk-!-margin-top-1"
      >
        !
      </span>
      <strong
        className="govuk-warning-text__text"
      >
        <span
          className="govuk-warning-text__assistive"
        >
          Warning
        </span>
        You can create new purchase methods in your
         
        <a
          className="govuk-link"
          href="/viewPurchaseMethods"
        >
          operator settings.
        </a>
         
        <br />
        Don't worry you can navigate back to this page when you are finished.
      </strong>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
    <a
      className="govuk-button govuk-button--secondary create-new-sop-button"
      data-module="govuk-button"
      draggable="false"
      href="/salesOfferPackages"
      id="create-new-button"
      role="button"
    >
      Create new
    </a>
  </CsrfForm>
</FullColumnLayout>
`;
